# backdraftbbq/server/index.js
@@ -1,5 +1,4 @@
 'use strict';
-"use strict";
 
 var fs = require("fs"),
     path = require("path"),
@@ -22,8 +21,36 @@ var serverPort = 8080;
 var spec = fs.readFileSync(path.join(__dirname, "api/swagger.yaml"), "utf8");
 var swaggerDoc = jsyaml.safeLoad(spec);
 
+var jwt = require('jsonwebtoken');
+var fs = require('fs');
+var cert_pub = fs.readFileSync(__dirname + '/config/backdraft-test.pem');
+function verifyToken(req, secDef, token, next) {
+    const bearerRegex = /^Bearer\s/;
+
+    if (token && bearerRegex.test(token)) {
+        var newToken = token.replace(bearerRegex, '');
+        jwt.verify(newToken, cert_pub,
+            {
+                algorithms: ["RS256", "HS256"],
+            },
+            (error, decoded) => {
+                if (error === null && decoded) {
+                    return next();
+                }
+                return next(req.res.sendStatus(403));
+            }
+        );
+    } else {
+        return next(req.res.sendStatus(403));
+    }
+}
+
 // swaggerRouter configuration
 var options = {
+    oasSecurity: true,
+    securityFile: {
+        Bearer: verifyToken
+    },
     controllers: path.join(__dirname, "./controllers"),
     useStubs: process.env.NODE_ENV === "development" // Conditionally turn on stubs (mock mode)
 };
